# hub

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.hub  Dockerfile.hub-agent  Dockerfile.hub-service  Dockerfile.singleuser  Dockerfile.singleuser-ds  Dockerfile.singleuser-ds-gpu  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.monitoring.yml  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  jupyterhub_config.py  profiles.json
.github/workflows/: console-ci.yml  docker-publish.yml
cmd/hub-agent/: main.go
cmd/hub-service/: main.go
cmd/kernel-mcp/: main.go
cmd/result-store-mcp/: main.go
cmd/sandbox-mcp/: main.go
config/: README.md  agent-default-config.json  profiles.json
console/: .gitignore  BACKLOG.md  BUILD-BLUEPRINT.md  PORTING-GUIDE.md  README.md  design-prototype.dc.html  embed.go  embed_test.go  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json  vite.chat.config.ts  vite.config.ts
console/src/: App.tsx  index.css  main.tsx
design/001-analytics-hub/: README.md  design.md  research.md  stage-1-spec.md  stages.md  user-stories.md
docs/: entra-id-setup.md  k8s-deployment.md
extensions/agent-bridge/: setup.py
extensions/hub-admin/: MIGRATION.md  package.json  pyproject.toml  tsconfig.json
extensions/hub-admin/hub_admin/: app.py  hub_proxy.py
extensions/hub-admin/jupyter-config/: hub_admin.json
extensions/hub-admin/src/: agentApiGraphQL.ts  api.ts  hugrClient.ts  plugin.ts
extensions/hub-admin/src/components/: AdminPanel.ts  icons.ts  modal.ts
extensions/hub-admin/style/: index.css
extensions/hub-chat/: MIGRATION.md  package.json  pyproject.toml
extensions/hub-chat/hub_chat/: app.py
extensions/hub-chat/jupyter-config/: hub_chat.json
extensions/hub-chat/src/: api.ts  convApiGraphQL.ts  hugrClient.ts  plugin.ts
extensions/hub-chat/src/components/: ChatPanel.ts
extensions/hub-chat/src/widgets/: ChatDocument.ts  ChatSidebar.ts  ConversationTree.ts  MessageRenderer.ts
extensions/hub-chat/style/: index.css
hub_profiles/: __init__.py  defaults.py  loader.py  resolver.py  schema.py  secrets.py  spawner.py  storage.py
k8s/hugr-hub/: .helmignore  Chart.yaml  values-minikube.yaml  values-production.yaml  values.yaml
keycloak/: HealthCheck.java  realm-config.json
monitoring/: loki-config.yaml  otel-config.yaml
pkg/agent/: agent.go  auth.go  config.go  learning.go  loop.go  mcpmanager.go  sandbox.go  session.go  session_test.go  skillrouter.go  (+6 more)
scripts/: idle-culler-with-notify.py  mount-storage.sh  validate-profiles.sh
shared/: README.txt
(+211 files in other folders)
